<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WS Deck Editor</string>
    <string name="card_name">Name</string>
    <string name="card_serial">Number</string>
    <string name="card_expansion">Expansion</string>
    <string name="card_rarity">Rarity</string>
    <string name="card_side">Side</string>
    <string name="card_type">Type</string>
    <string name="card_color">Color</string>
    <string name="card_level">Level</string>
    <string name="card_cost">Cost</string>
    <string name="card_power">Power</string>
    <string name="card_soul">Soul</string>
    <string name="card_trigger">Trigger</string>
    <string name="card_attribute">Special Attribute</string>
    <string name="card_text">Text</string>
    <string name="card_flavor_text">Flavor Text</string>
    <string name="card_total">Total</string>
    <string name="type_chara">Character</string>
    <string name="type_climax">Climax</string>
    <string name="type_event">Event</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="color_red">Red</string>
    <string name="color_blue">Blue</string>
    <string name="trigger_none">None</string>
    <string name="trigger_1s">Soul+1</string>
    <string name="trigger_2s">Soul+2</string>
    <string name="trigger_wind">Return</string>
    <string name="trigger_fire">Shot</string>
    <string name="trigger_bag">Pool</string>
    <string name="trigger_gold">Treasure</string>
    <string name="trigger_door">Comeback</string>
    <string name="trigger_book">Draw</string>
    <string name="trigger_gate">Gate</string>
    <string name="side_w">Weiβ</string>
    <string name="side_s">Schwarz</string>
    <string name="filter_keyword">Keyword</string>
    <string name="filter_serial"
        translatable="false">@string/card_serial</string>
    <string name="filter_name"
        translatable="false">@string/card_name</string>
    <string name="filter_attr"
        translatable="false">@string/card_attribute</string>
    <string name="filter_text"
        translatable="false">@string/card_text</string>
    <string name="filter_expansion"
        translatable="false">@string/card_expansion</string>
    <string name="filter_type"
        translatable="false">@string/card_type</string>
    <string name="filter_color"
        translatable="false">@string/card_color</string>
    <string name="filter_level_max">Max Level</string>
    <string name="filter_level_min">Min Level</string>
    <string name="filter_cost_max">Max Cost</string>
    <string name="filter_cost_min">Min Cost</string>
    <string name="filter_power_max">Max Power</string>
    <string name="filter_power_min">Min Power</string>
    <string name="filter_soul_max">Max Soul</string>
    <string name="filter_soul_min">Min Soul</string>
    <string name="filter_trigger"
        translatable="false">@string/card_trigger</string>
    <string name="filter_normal_only">Normal Only</string>
    <string name="nav_search">Search</string>
    <string name="nav_card_list">Card Lists</string>
    <string name="nav_update">Update</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_about">About</string>
    <string name="nav_deck_edit">Deck Edit</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="menu_filter_exp">Filter Expansions</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_filter_cards">Filter Cards</string>
    <string name="menu_sorting">Sorting</string>
    <string name="menu_delete_deck">Delete Deck</string>
    <string name="menu_duplicate_deck">Duplicate Deck</string>
    <string name="menu_deck_info">Deck Info</string>
    <string name="menu_add_deck">Add Deck</string>
    <string name="menu_add_to_deck">Add To Deck</string>
    <string name="dialog_info_level"
        tools:ignore="TypographyFractions">Level (0 / 1 / 2 / 3)</string>
    <string name="dialog_info_color">Color (Yellow / Green / Red / Blue)</string>
    <string name="dialog_info_type">Type (Character / Event / Climax)</string>
    <string name="dialog_select_your_deck">Select Deck</string>
    <string name="dialog_create_a_new_deck">New Deck</string>
    <string name="dialog_rename_deck">Rename Deck</string>
    <string name="dialog_change_card_count">Change Card Count</string>
    <string name="dialog_deck_name">Name</string>
    <string name="dialog_sort_by">Sort Order</string>
    <string name="dialog_deck_info">Information</string>
    <string name="dialog_delete_deck">Delete this deck?</string>
    <string name="dialog_update_database">Update Database</string>
    <string name="dialog_update_images">Update Images</string>
    <string name="dialog_download_all_images">Download All Images</string>
    <string name="dialog_count">Count</string>
    <string name="dialog_search_button">Search</string>
    <string name="dialog_update_button">Update</string>
    <string name="dialog_download_button">Download</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_delete_button">Delete</string>
    <string name="dialog_create_button">Create</string>
    <string name="dialog_change_button">Change</string>
    <string name="dialog_select_button">Select</string>
    <string name="dialog_sort_button">Sort</string>
    <string name="dialog_update_db_button">Update Database</string>
    <string name="dialog_update_images_button">Update Images</string>
    <string name="dialog_download_all_images_button">Download All Images</string>
    <string name="dialog_undo_button">Undo</string>
    <string name="msg_deck_error">Cannot add this card to deck.</string>
    <string name="msg_no_select_deck">Select a deck first.</string>
    <string name="msg_select_too_many">Selected too many cards.</string>
    <string name="msg_deck_duplicated">Deck duplicated.</string>
    <string name="msg_add_to_deck">Added to deck. </string>
    <string name="msg_add_to_deck_single">Added to deck. (%d)</string>
    <string name="msg_update_database">Database updated.</string>
    <string name="msg_update_image">Image updated.</string>
    <string name="msg_network_err">Network error. Please check your network and try again.</string>
    <string name="msg_no_deck">No deck found.</string>
    <string name="msg_cards_deck">Too many cards in this deck.</string>
    <string name="msg_set_fav">This favourite card is set.</string>
    <string name="msg_remove_card">Card Removed.</string>
    <string name="format_card_detail">%1$s Lv.%2$d %3$s</string>
    <string name="not_applicable_value"
        translatable="false">-</string>
    <string name="pref_license"
        translatable="false">license</string>
    <string name="pref_swipe_remove"
        translatable="false">swipeRemove</string>
    <string name="pref_is_first"
        translatable="false">isFirst</string>
    <string name="pref_hide_normal"
        translatable="false">hideNormal</string>
    <string name="pref_auto_close"
        translatable="false">autoClose</string>
    <string name="pref_show_limit"
        translatable="false">showLimit</string>
    <string name="pref_sort_order"
        translatable="false">sortOrder</string>
    <string name="pref_add_if_not_exist"
        translatable="false">addIfNotExist</string>
    <string name="pref_deck_id"
        translatable="false">deckId</string>
    <string name="pref_hide_normal_title">Show Normal Card Only</string>
    <string name="pref_auto_close_title">Auto Close Select Mode</string>
    <string name="pref_show_limit_title">Card Limit Shown</string>
    <string name="pref_add_if_not_exist_title">Add Card If Not Exist</string>
    <string name="pref_swipe_remove_title">Swipe Remove</string>
    <string name="pref_version_title">Version</string>
    <string name="pref_database_version_title">Database Version</string>
    <string name="pref_license_title">License</string>
    <string name="pref_hide_normal_summary">Hide all the RRR, SR, XR, SP.</string>
    <string name="pref_auto_close_summary">Close select mode after adding cards to deck or no card is selected.</string>
    <string name="pref_show_limit_summary">Number of cards show at the same time.</string>
    <string name="pref_add_if_not_exist_summary">Add a card to deck only if it does not exist in deck.</string>
    <string name="pref_swipe_remove_summary">Swipe from left to right to remove card and deck.</string>
    <string name="default_show_limit"
        translatable="false">200</string>
    <string name="acb_ws_logo">Weib Schwarz Logo</string>
    <string name="acb_card_image">Card Image</string>
    <string name="acb_icon">Icon</string>
    <string name="placeholder_text"
        translatable="false">Place Holder</string>
    <string name="search_result">Search Result</string>
    <string name="latest_version">Latest Version</string>
    <string name="current_version">Current Version</string>
    <string name="question_mark"
        translatable="false">\?</string>
    <string-array name="sort_type">
        <item>@string/card_serial</item>
        <item>@string/card_level</item>
        <item>Detail</item>
    </string-array>
    <string name="about_text">This is an open source project hosted on <a href="https://github.com/joshuaavalon/WsDeckEditor">Github</a>. You are welcome to report any issues or give any suggestions.</string>
    <string name="download_img_notice">Download image downloads <b>ALL</b> images. It cost around 300MB.</string>
    <string name="update_img_notice">Update image downloads missing images.</string>
    <string name="update_db_notice">Update database downloads the latest card data from internet. It costs around 10MB.</string>
    <string name="placeholder_number">0</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="card_power_1000">Power (1000)</string>
    <string name="license_url"
        translatable="false">https://github.com/joshuaavalon/WsDeckEditor/blob/master/LICENSE</string>
    <string name="source_url"
        translatable="false">https://github.com/joshuaavalon/WsDeckEditor/</string>
    <string name="web_url"
        translatable="false">http://ws-tcg.com/cardlist/?cardno=%s</string>
    <string name="google_play_url"
        translatable="false">https://play.google.com/store/apps/details?id=com.joshuaavalon.wsdeckeditor</string>
    <string name="pref_cat_about">About</string>
    <string name="pref_source_code_title">Source Code</string>
    <string name="pref_source_code">sourceCode</string>
    <string name="pref_version">version</string>
    <string name="pref_database_version">databaseVersion</string>
    <string name="nav_home">Home</string>
    <string name="search_hint">Search…</string>
    <string name="pref_cat_privacy">Privacy</string>
    <string name="pref_clear_quick_history_title">Clear Quick Search History</string>
    <string name="pref_clear_quick_history_summary">Clear all the card quick search history.</string>
    <string name="pref_clear_quick_history">clearQuickHistory</string>
    <string name="pref_quick_search_history">quickSearchHistory</string>
    <string name="pref_quick_search_history_summary">Record keywords used in card quick search.</string>
    <string name="pref_quick_search_history_title">Quick Search History</string>
    <string name="msg_clear_history">All history is cleared.</string>
    <string name="menu_image">Image</string>
    <string name="menu_share_image">Share image</string>
    <string name="share_your_deck">Share you deck</string>
</resources>