<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_card_list"
            android:icon="@drawable/ic_art_track_black_24dp"
            android:title="@string/nav_card_list" />
        <item
            android:id="@+id/nav_deck_edit"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:title="@string/nav_deck_edit" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_autorenew_black_24dp"
            android:title="@string/nav_update"
            app:actionLayout="@layout/icon_new_release" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/nav_about" />
    </group>
</menu>
