<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_card_list"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/nav_card_list" />
        <item
            android:id="@+id/nav_deck_edit"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/nav_deck_edit" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_search" />

        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_action_qr_code"
            android:title="@string/nav_qr" />
    </group>

    <item android:title="@string/nav_cat_system">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_update"
                android:icon="@drawable/ic_autorenew_black_24dp"
                android:title="@string/nav_update" />
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="Setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/nav_about" />
            </group>
        </menu>
    </item>
</menu>
